
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static
double DecodeAbTIFF(double ab)
{
 if (ab <= 128.)
  ab += 127.;
 else
  ab -= 127.;

 return ab;
}
